<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">方德智慧农业</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="project_name">方德农业大棚</string>
    <string name="allgreenhouse">所有大棚</string>
    <string name="back">返回</string>

    <!-- login -->
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="rember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

    <!-- home -->
    <string name="home_btn1">历史记录</string>
    <string name="home_btn2">监控中心</string>
    <string name="home_btn3">农业新闻</string>
    <string name="home_btn4">其他设置</string>

    <!-- history -->
    <string name="history_coredata">温室信息记录</string>
    <string name="history_instructions">控制记录</string>
    <string name="history_alarm">报警记录</string>

    <!-- title -->
    <string name="history_title">历史记录</string>
    <string name="news_title">农业新闻</string>

    <!-- others -->
    <string name="about">关于软件</string>
    <string name="change_pswd">修改密码</string>
    <string name="about_content_content">\t农业大棚客户端版权所有\n@青岛中科方德软件有限公司\n公司地址：青岛市高新区智力岛路1号创业大厦C座11层
\n邮箱：admin@nfs-qd.com</string>
    <string name="about_content_footer">方德农业大棚 v1.0</string>
    <string name="old_pswd">原密码：</string>
    <string name="new_pswd">新密码：</string>
    <string name="confirm_pswd">确认密码：</string>

</resources>