<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/nav_bg" >

		<TextView
			android:id="@+id/change_password_back"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableLeft="@drawable/back"
			android:gravity="center_vertical"
			android:padding="@dimen/normal_space"
			android:text="@string/back"
			android:textColor="@drawable/nav_back_text_color"
			android:textSize="@dimen/text_normal" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:text="@string/change_pswd"
			android:textColor="@color/white"
			android:textSize="@dimen/text_larger" />
	</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_space"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/old_pswd" />

            <EditText
                android:id="@+id/other_old_pswd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/big_space"
                android:layout_marginRight="@dimen/big_space"
                android:ems="20"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_space"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/new_pswd" />

            <EditText
                android:id="@+id/other_new_pswd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/big_space"
                android:layout_marginRight="@dimen/big_space"
                android:ems="20"
                android:singleLine="true" />
        </LinearLayout>
        
           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_space"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/confirm_pswd"
                 />

            <EditText
                android:id="@+id/other_confirm_pswd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/big_space"
                android:layout_marginRight="@dimen/big_space"
                android:ems="20"
                android:singleLine="true" />
        </LinearLayout>
        
           <Button
                android:id="@+id/bt_change_pswd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_btn_selector"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/change_pswd"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:textSize="@dimen/text_larger"
                android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>