<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/home_spliter_horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:visibility="visible"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:background="@color/home_spliter" >
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
		android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/home_spliter_horizontal"
        android:layout_marginBottom="2dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/home_btn_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/index_lishi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/little_space"
                android:text="@string/home_btn1"
                android:textSize="@dimen/text_big" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/home_spliter" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_monitor_center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/home_btn_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/index_jiankong" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/little_space"
                android:text="@string/home_btn2"
                android:textSize="@dimen/text_big" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_alignTop="@+id/home_spliter_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/btn_news"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/home_btn_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/index_nongye" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/little_space"
                android:text="@string/home_btn3"
                android:textSize="@dimen/text_big" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/home_spliter" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_other"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/home_btn_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/index_shezhi" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/little_space"
                android:text="@string/home_btn4"
                android:textSize="@dimen/text_big" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>