<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_back"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/nav_bg" >

        <ImageButton
            android:id="@+id/others_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home_btn4"
            android:textColor="@color/white"
            android:textSize="@dimen/text_top_big" />

        <ImageButton
            android:id="@+id/others_gohome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/nav_bg"
            android:src="@drawable/home" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:layout_marginTop="@dimen/big_space"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/others_about"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/others_btn_selector"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/big_space"
                android:layout_marginStart="@dimen/big_space"
                android:src="@drawable/about" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textSize="@dimen/text_larger" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/big_space"
            android:layout_marginRight="@dimen/big_space"
            android:background="@color/gray_light"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/others_change_pswd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/others_btn_selector"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/big_space"
                android:layout_marginStart="@dimen/big_space"
                android:src="@drawable/icon_lock" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/change_pswd"
                android:textSize="@dimen/text_larger" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/big_space"
            android:layout_marginRight="@dimen/big_space"
            android:background="@color/gray_light"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/others_logout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/others_btn_selector"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/big_space"
                android:layout_marginStart="@dimen/big_space"
                android:gravity="center"
                android:src="@drawable/icon_lock" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/logout"
                android:textSize="@dimen/text_larger" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>